--- a/spring-boot-project/spring-boot-dependencies/pom.xml
+++ b/spring-boot-project/spring-boot-dependencies/pom.xml
@@ -62,6 +62,7 @@
 		<freemarker.version>2.3.28</freemarker.version>
 		<elasticsearch.version>6.3.1</elasticsearch.version>
 		<glassfish-el.version>3.0.0</glassfish-el.version>
+		<glassfixh-jaxb.version>2.4.0-b180725.0644</glassfixh-jaxb.version>
 		<groovy.version>2.5.1</groovy.version>
 		<gson.version>2.8.5</gson.version>
 		<h2.version>1.4.197</h2.version>
@@ -1827,6 +1828,11 @@
 				<version>${glassfish-el.version}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>${glassfixh-jaxb.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.glassfish.jersey</groupId>
 				<artifactId>jersey-bom</artifactId>
 				<version>${jersey.version}</version>
@@ -1919,6 +1925,13 @@
 				<groupId>org.hibernate.validator</groupId>
 				<artifactId>hibernate-validator</artifactId>
 				<version>${hibernate-validator.version}</version>
+				<exclusions>
+					<!-- https://hibernate.atlassian.net/browse/HV-1644 -->
+					<exclusion>
+						<groupId>org.openjfx</groupId>
+						<artifactId>javafx.base</artifactId>
+					</exclusion>
+				</exclusions>
 			</dependency>
 			<dependency>
 				<groupId>org.hibernate.validator</groupId>
